--- a/demo/angular/index.html
+++ b/demo/angular/index.html
@@ -15,6 +15,9 @@
         <a href="../index.html">
           <button>VanillaJS</button>
         </a>
+        <a href="../delegate/index.html">
+          <button>Delegated</button>
+        </a>
       </nav>
     </header>
     <main>
