--- a/demo/delegate/index.html
+++ b/demo/delegate/index.html
@@ -15,27 +15,21 @@
         <a href="../angular/index.html">
           <button>AngularJS</button>
         </a>
-        <a href="../delegate/index.html">
-          <button>Delegated</button>
+        <a href="../jquery/index.html">
+          <button>JQuery</button>
         </a>
       </nav>
     </header>
     <main>
       <header>
-        <h1>Demo jQuery</h1>
+        <h1>Demo Delegated</h1>
       </header>
       <article>
-        <ul class="well" id="source">
-          <li class="item"><button>a</button></li>
-          <li class="item"><button>very</button></li>
-          <li class="item"><button>simple</button></li>
-          <li class="item"><button>demo</button></li>
-        </ul>
+        <ul class="well" id="source"></ul>
         <ol class="well" id="target"></ol>
       </article>
     </main>
-    <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
-    <script src="fn-drag-drop-jquery.js"></script>
+    <script src="../fn-drag-drop.js"></script>
     <script src="demo.js"></script>
   </body>
 </html>
