--- a/demo/index.html
+++ b/demo/index.html
@@ -15,6 +15,9 @@
         <a href="jquery/index.html">
           <button>jQuery</button>
         </a>
+        <a href="delegate/index.html">
+          <button>Delegated</button>
+        </a>
       </nav>
     </header>
     <main>
